--- a/templates/grid2.html
+++ b/templates/grid2.html
@@ -9,29 +9,29 @@
 
 <main>
     <a href="{{ url_for('Registro') }}" class="botón_registrar">Registrar usuario</a>
-        <div class="container_grid">
-
-    <br>
-    <br>
-    <br>
-    <br>
-
     <div class="container_grid">
-        <table class="table table-bordered">
-        <div class="row"><!--fila-->
-            <div class="col-sm">Nombres</div>
-            <div class="col-sm">Apellido Paterno</div>
-            <div class="col-sm">Apellido Materno</div>
-            <div class="col-sm">Correo</div>
-            <div class="col-sm">Rol</div>
-            <div class="col-sm">Telefono</div>
-            <div class="col-sm">Celular</div>
-            <div class="col-sm">Status</div>
-            <div class="col-sm">Clave electoral</div>
-            <div class="col-sm">Operaciones</div>
-            </div>
+
+        <br>
+        <br>
+        <br>
+        <br>
+
+        <div class="container_grid">
+            <table class="table table-bordered">
+                <div class="row"><!--fila-->
+                    <div class="col-sm">Nombres</div>
+                    <div class="col-sm">Apellido Paterno</div>
+                    <div class="col-sm">Apellido Materno</div>
+                    <div class="col-sm">Correo</div>
+                    <div class="col-sm">Rol</div>
+                    <div class="col-sm">Telefono</div>
+                    <div class="col-sm">Celular</div>
+                    <div class="col-sm">Status</div>
+                    <div class="col-sm">Clave electoral</div>
+                    <div class="col-sm">Operaciones</div>
+                </div>
         </div>
-    </table>
+        </table>
 
         <div class="row">
             <div class="col-sm"> Regina Valeria </div>
@@ -43,6 +43,10 @@
             <div class="col-sm">5512145698</div>
             <div class="col-sm"> 1 </div>
             <div class="col-sm">TEFAXHAAJA569</div>
+            <div class="col-sm"><a href=""><i class="fa-solid fa-magnifying-glass"></i></i><i
+                        class="fa-solid fa-pen-to-square"></i><i class="fa-solid fa-trash"></i>
+                    <div class="btn" data-toggle="modal" data-target="#confirmDeleteModal"></div>
+                </a></div>
             <div class="col-sm"><a href="{{url_for('mostrarDatosU')}}"><i class="fa-solid fa-book"></i></a><i class="fa-solid fa-magnifying-glass"></i></i><i class="fa-solid fa-pen-to-square"></i><i class="fa-solid fa-trash"></i></div>
             <!--<td><div class="eliminar" onclick="eliminarFila(this)"><i class="fas fa-trash"></i></div></td>-->
 
@@ -57,9 +61,11 @@
             <div class="col-sm">5544778900</div>
             <div class="col-sm"> 0 </div>
             <div class="col-sm">WHASJDJSK09NA</div>
-            <div class="col-sm"><a href="{{url_for('mostrarDatosU')}}"><i class="fa-solid fa-book"></i></a><a href=""></a><i class="fa-solid fa-magnifying-glass"></i><i class="fa-solid fa-pen-to-square"></i><i
-                        class="fa-solid fa-trash"></i></div>
-        </div>
+            <div class="col-sm"><a href="{{url_for('mostrarDatosU')}}"><i class="fa-solid fa-book"></i>"><i class="fa-solid fa-magnifying-glass"></i><i
+                        class="fa-solid fa-pen-to-square"></i><i class="fa-solid fa-trash"></i></a></div>
+                        
+
+                        
         <div class="row">
             <div class="col-sm"> Jorgeee </div>
             <div class="col-sm"> Yone </div>
@@ -70,21 +76,59 @@
             <div class="col-sm">5687410239</div>
             <div class="col-sm"> 1 </div>
             <div class="col-sm">POASKIWE78QYJN</div>
+            <div class="col-sm"><a href=""><i class="fa-solid fa-magnifying-glass"></i><i
+                        class="fa-solid fa-pen-to-square"></i><i class="fa-solid fa-trash"></i></a></div>
+        </div>
+        <!--icono de eliminar con propiedades de modal e interactivo-->
+        <button class="btn" data-toggle="modal" data-target="#confirmDeleteModal">
+            <div class="icon-container" onclick="eliminarElemento()">
+                <i class="fa-solid fa-trash"></i>
+                <span class="icon-text">Eliminar</span>
+            </div>
+        </button>
+
+        <!-- Modal -->
+        <div class="modal fade" id="confirmDeleteModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel"> Confirmar Eliminación</h5>
+                        <button class="dele" data-dismiss="modal">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        ¿Estás seguro de que deseas eliminar este elemento?
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="cancel" data-dismiss="modal">Cancelar</button>
+                        <button type="button" class="danger">Eliminar</button>
+                    </div>
+                </div>
+            </div>
             <div class="col-sm"><a href="{{url_for('mostrarDatosU')}}"><i class="fa-solid fa-book"></i></a><i class="fa-solid fa-magnifying-glass"></i><i class="fa-solid fa-pen-to-square"></i><i
                         class="fa-solid fa-trash"></i></div>
         </div>
     </div>
+
+
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-        <script>
-            function eliminarFila(button) {
-              // Obtener la fila a la que pertenece el botón
-              var fila = button.parentNode.parentNode;
-              // Eliminar la fila
-              fila.parentNode.removeChild(fila);
-            }
-          </script>
+
+    <script>
+        function eliminarElemento() {
+            console.log('Elemento eliminado');
+        
+        }
+    </script>
+
 </main>
 </body>
 {% endblock %}
