--- a/templates/registrousuario.html
+++ b/templates/registrousuario.html
@@ -42,7 +42,7 @@
                     <input type="tel" name="cell" required>
                 </label>
                 <label>
-                    <p>Telefono</p>
+                    <p>Telefono:</p>
                     <input type="tel" name="tel">
                 </label>
                 <label>
