Se hicieron cambios en la vista de Registro usuario e iniico y se arreglaron errores

--- a/templates/header.html
+++ b/templates/header.html
@@ -9,7 +9,7 @@
             <a herf="#">Datos del Usuario</a>
             <ul class="menu_vertical">
                 <li><a href="{{url_for('mostrarDatosU')}}">Visualizar datos</a></li>
-                <li><a href="{{url_for('CambiarContraseña')}}">Cambiar Contraseña</a></li>
+                <li><a href="{{url_for('cambiarContraseña')}}">Cambiar Contraseña</a></li>
                 <li><a href="{{url_for('editarDatos')}}" onclick="mostrarEdicion()">Editar datos</a></li>
             </ul>
         </li>
