--- a/static/base.css
+++ b/static/base.css
@@ -13,9 +13,10 @@
     --primary-color: #231f20;
     --secondary-color: #9a2020;
     --gray_base-color: #e1e1e1;
-    --form_card-color1: #fbfbfb;
+    --form_card-color1: #e4e4e4;
     --text_box-color: #f9cbd0;
     --white: #ffffff;
+    --inputs-color: #a7a7a7;
 }
 
 * {
