--- a/static/inicio.css
+++ b/static/inicio.css
@@ -8,8 +8,8 @@
 
 
 .prinButton {
-    color: #ffffff;
-    background-color: #8B0000;
+    color: var(--white);
+    background-color: var(--secondary-color);
     padding: 10px 20px;
     border: none;
     border-radius: 6px;
@@ -21,8 +21,8 @@
 }
 
 .secButton {
-    color: #ffffff;
-    background-color: #8B0000;
+    color: var(--white);
+    background-color: var(--secondary-color);
     padding: 10px 20px;
     border: none;
     border-radius: 6px;
@@ -45,29 +45,6 @@ button:active {
     background-color: #740000;
 }
 
-.navbarInicio {
-    display: grid;    
-    overflow: hidden;
-    background-color:#8B0000;
-    font-family: Arial, Helvetica, sans-serif;
-    border-radius: 6px;
-    
-}
-
-.navbarInicio a {
-    text-decoration: none;
-    float: right;
-    display: grid;
-    color: #ffff;
-    text-align: center;
-    padding: 25px 40px;
-    font-size: 20px;
-}
-
-.navbarInicio a:hover {
-    color: #8b8b8b;
-}
-
 .titulo {
     font-size: 50px;
     margin-bottom: 90px;
@@ -84,7 +61,7 @@ button:active {
 }
 
 .seccionGral section {
-    background-color: #d9d9d9;
+    background-color: var(--gray_base-color);
     border-radius: 6px;
     padding: 16px;
 }
