--- a/static/registrousuario.css
+++ b/static/registrousuario.css
@@ -2,24 +2,17 @@
     padding: 16px;
     padding-top: 116px;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     grid-template-rows: 375px;
     grid-auto-flow: dense;
     gap: 16px;
 }
 
 .ruGral section {
-    background-color: #e1e1e1;
+    background-color: var(--gray_base-color);
     border-radius: 6px;
     padding: 16px;
     height: max-content;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-}
-
-.registroUsuario h3 {
-    grid-column-start:  1;
-    grid-column-end: -1;
 }
 
 .registroUsuario h3 {
@@ -31,7 +24,7 @@
 
 
 .ruGral input{
-    background-color: #a7a7a7;
+    background-color: var(--inputs-color);
     display: grid;
     position: static;
     border-radius: 8px;
@@ -53,9 +46,18 @@
 .ruGral input[type=submit] {
     text-align: center;
     height: max-content;
-    background-color: #8B0000;
+    background-color: var(--secondary-color);
     color: #ffffff;
-    grid-column: 2;
-    grid-row: 2;
+    display: block;
+    position: absolute;
+    right: 20px;
+    top: 440px;
 }
+
+.formularioRegUs {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+}
+
 
