--- a/static/base.css
+++ b/static/base.css
@@ -13,6 +13,7 @@
     --primary-color: #231f20;
     --secondary-color: #9a2020;
     --gray_base-color: #e1e1e1;
+    --gray_secondary-color: #a7a7a7;
     --form_card-color1: #fbfbfb;
     --text_box-color: #f9cbd0;
     --white: #ffffff;
