Se añadio la vista de datos del usuario y su archivo CSS

--- a/static/base.css
+++ b/static/base.css
@@ -8,6 +8,8 @@
 @import url(registrousuario.css);
 @import url(editardatosestilo.css);
 @import url(grid2.css);
+@import url(domicilio.css);
+@import url(visualizarDatos.css);
 
 :root {
     --primary-color: #231f20;
