--- a/templates/visualizarDatos.html
+++ b/templates/visualizarDatos.html
@@ -6,9 +6,18 @@
 {% endblock %}
 {% block content %}
 <main class="visualizarDatos">
+    <strong><h3>Datos</h3></strong>
     <section class="secVisualizar">
-        <strong><h3>Datos</h3></strong>
-        
+        <section class="datos">
+                <p>Nombre: Dagan</p>
+                <p>Apellido paterno: Vega</p>
+                <p>Apellido materno: Vega</p>
+                <p>Celular: 5630235019</p>
+                <p>Telefono: Null</p>
+                <p>Correo: daganjv.pro@gmail.com</p>
+                <p>Clave elector: 25565</p>
+                <p>Rol: Administrador</p>
+        </section>
     </section>
 </main>
 {% endblock %}
