Se agrego la vista de datos de usuario y su archivo CSS

--- a/static/base.css
+++ b/static/base.css
@@ -15,7 +15,8 @@
     --primary-color: #231f20;
     --secondary-color: #9a2020;
     --gray_base-color: #e1e1e1;
-    --gray_secondary-color: #a7a7a7;
+    --gray_secondary-color: #bebebe;
+    --gray_font-color: #696969;
     --form_card-color1: #fbfbfb;
     --form_card-color2: #e4e4e4;
     --text_box-color: #f9cbd0;
