--- a/templates/visualizarDatos.html
+++ b/templates/visualizarDatos.html
@@ -6,17 +6,43 @@
 {% endblock %}
 {% block content %}
 <main class="visualizarDatos">
-    <strong><h3>Datos</h3></strong>
     <section class="secVisualizar">
         <section class="datos">
-                <p>Nombre: Dagan</p>
-                <p>Apellido paterno: Vega</p>
-                <p>Apellido materno: Vega</p>
-                <p>Celular: 5630235019</p>
-                <p>Telefono: Null</p>
-                <p>Correo: daganjv.pro@gmail.com</p>
-                <p>Clave elector: 25565</p>
-                <p>Rol: Administrador</p>
+            <strong><h3>Datos</h3></strong>
+            <section class="nombreUs">
+                <strong><p>Nombre:</p></strong>
+                <p class="secP">Dagan</p>
+            </section>
+            <section class="apellidoP">
+                <strong><p>Apellido paterno:</p></strong>
+                <p class="secP">Vega</p>
+            </section>
+            <section class="apellidoM">
+                <strong><p>Apellido materno:</p></strong>
+                <p class="secP">Vega</p>
+            </section>
+            <section class="celular">
+                <strong><p>Celular:</p></strong>
+                <p class="secP">5630235019</p>
+            </section>
+            <section class="telefono">
+                <strong><p>Telefono:</p></strong>
+                <p class="secP">null</p>
+            </section>
+            <section class="correo:">
+                <strong><p>Correo:</p></strong>
+                <p class="secP">daganjv.pro@gmail.com</p>
+            </section>
+            <section class="cv">
+                <strong><p>Clave elector:</p></strong>
+                <p class="secP">25565</p>
+            </section>
+            <section class="rol">
+                <strong><p>Rol:</p></strong>
+                <p class="secP">Admin</p>
+            </section>
+            <button class="secButton">Agregar direción</button>
+            <button class="secButton">Cambiar contraseña</button>
         </section>
     </section>
 </main>
