--- a/static/login.css
+++ b/static/login.css
@@ -36,20 +36,20 @@
       background: #fff;
       padding: 15px;
       align-items: center;
+      
     }
   
 input[type=text] {
   /*input sobre el nombre y contraseña del usuario*/
-    margin-top: 10px; /*es el margen que tiene un boton de otro*/
+    margin-top: 10px; /*es el margen que tiene un boton de otro*/ /* quite el color predeterminado y quite heigth para no choquen los css de los que tenemos todos*/ 
     padding: 5px;
-    width: 60%;
     font-size: 11px; /*es el acercamiento de la letra */
     font-weight: 6px; /*el grosor de la letra*/
-    background-color: rgba(172, 22, 64, 0.918);
+  
   
   }
-input::placeholder {  /*input del texto provicional(placeholder)*/
-    color: white;
+input::placeholder {  /*input del texto provicional(placeholder)*/ /*jason corregi a color negro  */
+    color: rgb(0, 0, 0);
     font-size: 11px;
     
   }
