--- a/templates/comite.html
+++ b/templates/comite.html
@@ -59,13 +59,11 @@
         <div><i class="fas fa-chevron-right"></i><input type="butt" value="Siguiente" /></div>
     </section>
 
-    <script>
-        function mostrarComite() {
-            document.getElementById("Cont").style.display = "block";
-        }
+    <!--<script>
+    
         function cerrarComite() {
             document.getElementById("Cont").style.display = "none";
         }
-    </script>
+    </script>-->
 </main>
 {% endblock %}
