--- a/templates/header.html
+++ b/templates/header.html
@@ -13,7 +13,7 @@
                 <li><a href="{{url_for('editarDatos')}}" onclick="mostrarEdicion()">Editar datos</a></li>
             </ul>
         </li>
-        <li><a href="{{url_for('comite')}}" onclick="mostrarComite()">Comite</a></li>
+        <li><a href="{{url_for('comite')}}">Comite</a></li>
         <li><a href="{{url_for('evento')}}">Evento</a></li>
         <li><a href="{{url_for('mostrarAdmin')}}" onclick="mostrarComite() ">Admin</a></li>
         <li><a href="{{url_for('cerrarSesion')}}" onclick="mostrarLogOut()">Cerrar sesión</a></li>
