--- a/templates/admin.html
+++ b/templates/admin.html
@@ -4,3 +4,128 @@
     {% include "header.html" %}
 </header>
 {% endblock %}
+{% block content %}
+
+<main>
+    <a href="{{ url_for('Registro') }}" class="botón_registrar">Registrar usuario</a>
+    <div class="container_grid">
+    <a href="" class="botón_buscar">Busqueda</a>
+
+    
+        <br>
+        <br>
+        <br>
+        <br>
+
+        <div class="container_grid">
+            <table class="table table-bordered">
+                <div class="row"><!--fila-->
+                    <div class="col-sm">Nombres</div>
+                    <div class="col-sm">Apellido Paterno</div>
+                    <div class="col-sm">Apellido Materno</div>
+                    <div class="col-sm">Correo</div>
+                    <div class="col-sm">Rol</div>
+                    <div class="col-sm">Telefono</div>
+                    <div class="col-sm">Celular</div>
+                    <div class="col-sm">Status</div>
+                    <div class="col-sm">Clave electoral</div>
+                    <div class="col-sm">Operaciones</div>
+                </div>
+        </div>
+        </table>
+
+        <div class="row">
+            <div class="col-sm"> Regina Valeria </div>
+            <div class="col-sm"> Diaz </div>
+            <div class="col-sm"> Vazquez </div>
+            <div class="col-sm">@gmail.com</div>
+            <div class="col-sm">Militante</div>
+            <div class="col-sm">5555897412</div>
+            <div class="col-sm">5512145698</div>
+            <div class="col-sm"> 1 </div>
+            <div class="col-sm">TEFAXHAAJA569</div>
+            <div class="col-sm"><a href="{{url_for('mostrarDatosU')}}"><i class="fa-solid fa-book"></i><i class="fa-solid fa-pen-to-square"></i></a>
+                    <button class="btn" data-toggle="modal" data-target="#confirmDeleteModal">
+                    <div class="icon-container" onclick="eliminarElemento()">
+                        <i class="fa-solid fa-trash"></i>
+                        <span class="tooltip">Eliminar</span>
+                    </div>
+                </button>
+            </div>
+
+        </div>
+        <div class="row">
+            <div class="col-sm"> Jason Josie </div>
+            <div class="col-sm"> Rojas </div>
+            <div class="col-sm"> Rosales </div>
+            <div class="col-sm">@gmail.com</div>
+            <div class="col-sm">Militante</div>
+            <div class="col-sm">5589656454</div>
+            <div class="col-sm">5544778900</div>
+            <div class="col-sm"> 0 </div>
+            <div class="col-sm">WHASJDJSK09NA</div>
+            <div class="col-sm"><a href=""><i class="fa-solid fa-book"></i><i class="fa-solid fa-pen-to-square"></i><i
+                        class="fa-solid fa-trash"></i></a></div>
+        </div>
+
+
+
+        <div class="row">
+            <div class="col-sm"> Jorgeee </div>
+            <div class="col-sm"> Yone </div>
+            <div class="col-sm"> Hernandez </div>
+            <div class="col-sm">@gmail.com</div>
+            <div class="col-sm">Militante</div>
+            <div class="col-sm">5556874102</div>
+            <div class="col-sm">5687410239</div>
+            <div class="col-sm"> 1 </div>
+            <div class="col-sm">POASKIWE78QYJN</div>
+            <div class="col-sm"><a href=""><i class="fa-solid fa-book"></i><i class="fa-solid fa-pen-to-square"></i><i
+                        class="fa-solid fa-trash"></i></a></div>
+        </div>
+
+        <!-- Modal -->
+        <div class="modal fade" id="confirmDeleteModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel"> Confirmar Eliminación</h5>
+                        <i class="fa-regular fa-circle-xmark" data-dismiss="modal"></i>                        
+                    </div>
+                    <div class="modal-body">
+                        ¿Estás seguro de que deseas eliminar este elemento?
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="cancel" data-dismiss="modal">Cancelar</button>
+                        <button type="button" class="danger">Eliminar</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+
+    <script>
+        function eliminarElemento() {
+            console.log('Elemento eliminado'); // Ejemplo: simplemente imprimir un mensaje
+        }
+        function editar() {
+            console.log(' editado'); 
+        }
+    </script>
+
+
+</main>
+</body>
+
+{% endblock %}
